--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:recurring": "playwright test tests/recurring.spec.ts",
+    "test:e2e:emails": "playwright test tests/emails.spec.ts",
+    "test:email:templates": "tsx scripts/test-all-email-templates.ts",
+    "test:email:send": "tsx scripts/test-all-email-templates.ts --send",
     "test:all": "npm run test && npm run test:e2e",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name sync-schema",
